--- a/WebCaseUI/WebCaseUI.csproj
+++ b/WebCaseUI/WebCaseUI.csproj
@@ -201,6 +201,7 @@
     <Content Include="Views\Home\Case.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Update.cshtml" />
+    <Content Include="Views\Home\All.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
