--- a/WebCaseUI/WebCaseUI.csproj
+++ b/WebCaseUI/WebCaseUI.csproj
@@ -161,6 +161,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Case.cs" />
+    <Compile Include="Models\ListCases.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
