--- a/WebCaseUI/WebCaseUI.csproj
+++ b/WebCaseUI/WebCaseUI.csproj
@@ -203,6 +203,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Update.cshtml" />
     <Content Include="Views\Home\All.cshtml" />
+    <Content Include="Views\Home\GetCaseById.cshtml" />
+    <Content Include="Views\Home\ShowCase.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
